revamped contact section

--- a/index.html
+++ b/index.html
@@ -127,80 +127,83 @@
 				<h2 class="col-12 text-center tm-section-title">Find Us</h2>
 			</header>
 
-			<div class="contact-subsection-container">
-				<div class="contact-subsection">
-					<h4 class="tm-info-title subsection-title">Hours</h4>
-					<address>
-						<div class="hours-row">
-							<span>Monday:</span>
-							<span>7AM - 9PM</span>
+			<div class="contact-row">
+				<div class="contact-subsection-container">
+					<div class="contact-subsection">
+						<h4 class="tm-info-title subsection-title">Address</h4>
+						<address>
+							241 Main Street
+							<br />
+							Milltown - Head of Bay d'Espoir
+							<br />
+							Newfoundland & Labrador
+							<br />
+							A0H 1R0
+						</address>
+					</div>
+					<div class="contact-subsection">
+						<h4 class="tm-info-title subsection-title">Hours</h4>
+						<address>
+							<div class="hours-row">
+								<span>Monday:</span>
+								<span>7AM - 9PM</span>
+							</div>
+							<div class="hours-row">
+								<span>Tuesday:</span>
+								<span>7AM - 9PM</span>
+							</div>
+							<div class="hours-row">
+								<span>Wednesday:</span>
+								<span>7AM - 9PM</span>
+							</div>
+							<div class="hours-row">
+								<span>Thursday:</span>
+								<span>7AM - 9PM</span>
+							</div>
+							<div class="hours-row">
+								<span>Friday:</span>
+								<span>7AM - 9PM</span>
+							</div>
+							<div class="hours-row">
+								<span>Saturday:</span>
+								<span>9AM - 9PM</span>
+							</div>
+							<div class="hours-row">
+								<span>Sunday:</span>
+								<span>10AM - 9PM</span>
+							</div>
+						</address>
+					</div>
+					<div class="contact-info-col">
+						<h4 class="tm-info-title subsection-title">Contact</h4>
+						<div class="contact-info-col-inner">
+							<a href="tel:709-882-2564" class="tm-contact-link">
+								<img src="img/phoneicon.png" alt="phone icon" class="tm-contact-icon"></img>
+								(709) 882-2564
+							</a>
+							<a href="mailto:macsconveniencenl@gmail.com" class="tm-contact-link">
+								<img src="img/email-icon.png" alt="email icon" class="tm-contact-icon"></img>
+								macsconveniencenl@gmail.com
+							</a>
+							<a href="https://www.facebook.com/CGConvenience/" target="_blank" class="tm-contact-link">
+								<img src="img/facebookicon.png" alt="facebook icon" class="tm-contact-icon"></img>
+								Mac's Convenience
+							</a>
 						</div>
-						<div class="hours-row">
-							<span>Tuesday:</span>
-							<span>7AM - 9PM</span>
-						</div>
-						<div class="hours-row">
-							<span>Wednesday:</span>
-							<span>7AM - 9PM</span>
-						</div>
-						<div class="hours-row">
-							<span>Thursday:</span>
-							<span>7AM - 9PM</span>
-						</div>
-						<div class="hours-row">
-							<span>Friday:</span>
-							<span>7AM - 9PM</span>
-						</div>
-						<div class="hours-row">
-							<span>Saturday:</span>
-							<span>9AM - 9PM</span>
-						</div>
-						<div class="hours-row">
-							<span>Sunday:</span>
-							<span>10AM - 9PM</span>
-						</div>
-					</address>
+					</div>
 				</div>
-				<div class="contact-info-section">
-					<h4 class="tm-info-title subsection-title">Contact</h4>
-					<a href="tel:709-882-2564" class="tm-contact-link">
-						<img src="img/phoneicon.png" alt="phone icon" class="tm-contact-icon"></img>
-						(709) 882-2564
-					</a>
-					<a href="mailto:macsconveniencenl@gmail.com" class="tm-contact-link">
-						<img src="img/email-icon.png" alt="email icon" class="tm-contact-icon"></img>
-						macsconveniencenl@gmail.com
-					</a>
-					<a href="https://www.facebook.com/CGConvenience/" target="_blank" class="tm-contact-link">
-						<img src="img/facebookicon.png" alt="facebook icon" class="tm-contact-icon"></img>
-						Mac's Convenience
-					</a>
-				</div>
-				<div class="contact-subsection">
-					<h4 class="tm-info-title subsection-title">Address</h4>
-					<address>
-						241 Main Street
-						<br />
-						Milltown - Head of Bay d'Espoir
-						<br />
-						Newfoundland & Labrador
-						<br />
-						A0H 1R0
-					</address>
-				</div>
-			</div>
-            
 <!-- How to change your own map point
 	1. Go to Google Maps
 	2. Click on your location point
 	3. Click "Share" and choose "Embed map" tab
 	4. Copy only URL and paste it within the src="" field below
 -->
-			<div class="tm-container-inner-2 tm-map-section">
-				<div class="row">
-					<div class="col-12">
-						<div class="tm-map">
-							<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2673.654192846537!2d-55.74717568837994!3d47.9237281977643!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4b719ba9dd35334f%3A0xd0a12ecf8dc63ca5!2sLee&#39;s%20Convenence!5e0!3m2!1sen!2sca!4v1734825561411!5m2!1sen!2sca" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+				<div class="tm-container-inner-2 tm-map-section">
+					<div class="row">
+						<div class="col-12">
+							<div class="tm-map">
+								<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2673.654192846537!2d-55.74717568837994!3d47.9237281977643!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4b719ba9dd35334f%3A0xd0a12ecf8dc63ca5!2sLee&#39;s%20Convenence!5e0!3m2!1sen!2sca!4v1734825561411!5m2!1sen!2sca" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -213,7 +216,7 @@
 		</button>
 
 		<footer class="tm-footer text-center">
-			<p>Copyright &copy; <script>document.write(new Date().getFullYear())</script> Mac's Convenience | Design: <a rel="nofollow" href="https://briannamcdonald.me/portfolio-website">Brianna McDonald</a> </p>
+			<p>Copyright &copy; <script>document.write(new Date().getFullYear())</script> Mac's Convenience&nbsp;&nbsp;|&nbsp;&nbsp;Design: <a rel="nofollow" href="https://briannamcdonald.me/portfolio-website">Brianna McDonald</a> </p>
 		</footer>
 	</div>
 	<script src="js/parallax.min.js"></script>
