added more media queries

--- a/index.html
+++ b/index.html
@@ -51,13 +51,14 @@
 		<main>
 			<header class="row tm-welcome-section" id="about">
 				<h2 class="col-12 text-center tm-section-title">About Our Store</h2>
-				<p class="col-12 text-center">Mac’s Convenience is a fully equipped gas bar and convenience store. <br />
+				<p class="col-12 text-center">Mac's Convenience is a fully equipped gas bar and convenience store. <br />
 					We sell gas, diesel, beer, cigarettes, soft serve, slushies, giftware, and much more!</p>
 			</header>
 
 			<!-- Gallery -->
 			<div class="row tm-gallery">
-				<div id="tm-gallery-page-pizza" class="tm-gallery-page">
+				<!-- Desktop Layout (4 in a row) -->
+				<div class="tm-gallery-page desktop-gallery">
 					<article class="col-lg-3 col-md-4 col-sm-6 col-12 tm-gallery-item">
 						<figure>
 							<div class="img-container">
@@ -91,33 +92,73 @@
 						</figure>
 					</article>
 				</div>
-				<div class="gallery-container">
-					<div class="gallery-grid">
-						<figure class="gallery-item img-container">
-							<img src="img/fireworks.jpg" alt="Fireworks">
-							<figcaption>Fireworks</figcaption>
-						</figure>
-						<figure class="gallery-item img-container">
-							<img src="img/biosteel.jpg" alt="TODO">
-							<figcaption>Sports Drinks</figcaption>
-						</figure>
-						<figure class="gallery-item img-container">
-							<img src="img/quidividibeer.jpg" alt="TODO">
-							<figcaption>Beer TODO</figcaption>
-						</figure>
-						<figure class="gallery-item img-container">
-							<img src="img/morebeer.jpg" alt="TODO">
-							<figcaption>Beer TODO</figcaption>
-						</figure>
-						<figure class="gallery-item img-container">
-							<img src="img/fishing.jpg" alt="Darts">
-							<figcaption>Darts Supplies and Memorabilia</figcaption>
-						</figure>
-						<figure class="gallery-item img-container">
-							<img src="img/wool.jpg" alt="Wool and Knitting Supplies">
-							<figcaption>Wool and Knitting Supplies</figcaption>
-						</figure>
+
+				<!-- Tablet/Mobile Layout (2x2) -->
+				<div class="tm-gallery-page tablet-gallery">
+					<div class="gallery-row">
+						<article class="col-6 tm-gallery-item">
+							<figure>
+								<div class="img-container">
+									<img src="img/2icecream.jpg" alt="Ice Cream Flavors" class="img-fluid tm-gallery-img">
+									<figcaption>Wide Variety of <br /> Ice Cream Flavors</figcaption>
+								</div>
+							</figure>
+						</article>
+						<article class="col-6 tm-gallery-item">
+							<figure>
+								<div class="img-container">
+									<img src="img/softserve_blur.png" alt="Soft Serve Cone" class="img-fluid tm-gallery-img" />
+									<figcaption>Soft Serve Cones</figcaption>
+								</div>
+							</figure>
+						</article>
 					</div>
+					<div class="gallery-row">
+						<article class="col-6 tm-gallery-item">
+							<figure>
+								<div class="img-container">
+									<img src="img/slushies2.jpg" alt="Slushies" class="img-fluid tm-gallery-img" />
+									<figcaption>Slushies</figcaption>
+								</div>
+							</figure>
+						</article>
+						<article class="col-6 tm-gallery-item">
+							<figure>
+								<div class="img-container">
+									<img src="img/icecreamnachos.jpg" alt="Ice Cream Nachos" class="img-fluid tm-gallery-img" />
+									<figcaption>Ice Cream Nachos</figcaption>
+								</div>
+							</figure>
+						</article>
+					</div>
+				</div>
+			</div>
+			<div class="gallery-container">
+				<div class="gallery-grid">
+					<figure class="gallery-item img-container">
+						<img src="img/fireworks.jpg" alt="Fireworks">
+						<figcaption>Fireworks</figcaption>
+					</figure>
+					<figure class="gallery-item img-container">
+						<img src="img/biosteel.jpg" alt="TODO">
+						<figcaption>Sports Drinks</figcaption>
+					</figure>
+					<figure class="gallery-item img-container">
+						<img src="img/quidividibeer.jpg" alt="TODO">
+						<figcaption>Beer TODO</figcaption>
+					</figure>
+					<figure class="gallery-item img-container">
+						<img src="img/morebeer.jpg" alt="TODO">
+						<figcaption>Beer TODO</figcaption>
+					</figure>
+					<figure class="gallery-item img-container">
+						<img src="img/fishing.jpg" alt="Darts">
+						<figcaption>Darts Supplies and Memorabilia</figcaption>
+					</figure>
+					<figure class="gallery-item img-container">
+						<img src="img/wool.jpg" alt="Wool and Knitting Supplies">
+						<figcaption>Wool and Knitting Supplies</figcaption>
+					</figure>
 				</div>
 			</div>
 		</main>
@@ -312,6 +353,27 @@
 				navToggle.setAttribute('aria-expanded', 'false');
 			}
 		});
+	</script>
+	<script>
+		function adjustFacebookWidth() {
+			const fbPage = document.querySelector('.fb-page');
+			if (window.innerWidth <= 320) {
+				fbPage.setAttribute('data-width', '280');
+			} else if (window.innerWidth <= 360) {
+				fbPage.setAttribute('data-width', '300');
+			} else if (window.innerWidth <= 576) {
+				fbPage.setAttribute('data-width', '400');
+			} else if (window.innerWidth <= 768) {
+				fbPage.setAttribute('data-width', '450');
+			} else {
+				fbPage.setAttribute('data-width', '500');
+			}
+			// Reload the Facebook plugin to apply the new width
+			if (FB) FB.XFBML.parse();
+		}
+
+		window.addEventListener('load', adjustFacebookWidth);
+		window.addEventListener('resize', adjustFacebookWidth);
 	</script>
 </body>
 </html>
