fixed overflow issue and added media queries for text

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
 		<main>
 			<header class="row tm-welcome-section" id="about">
 				<h2 class="col-12 text-center tm-section-title">About Our Store</h2>
-				<p class="col-12 text-center">Mac's Convenience is a fully equipped gas bar and convenience store. <br />
-					We sell gas, diesel, beer, cigarettes, soft serve, slushies, giftware, and much more!</p>
+				<p class="col-12 text-center">Mac's Convenience is a fully equipped gas bar and convenience&nbsp;store. <br />
+					We sell gas, diesel, beer, cigarettes, soft serve, slushies, giftware, and&nbsp;much&nbsp;more!</p>
 			</header>
 
 			<!-- Gallery -->
@@ -145,11 +145,11 @@
 					</figure>
 					<figure class="gallery-item img-container">
 						<img src="img/quidividibeer.jpg" alt="TODO">
-						<figcaption>Beer TODO</figcaption>
+						<figcaption>Beer</figcaption>
 					</figure>
 					<figure class="gallery-item img-container">
 						<img src="img/morebeer.jpg" alt="TODO">
-						<figcaption>Beer TODO</figcaption>
+						<figcaption>Beer</figcaption>
 					</figure>
 					<figure class="gallery-item img-container">
 						<img src="img/fishing.jpg" alt="Darts">
@@ -186,7 +186,7 @@
 		<div class="announcements-section" id="announcements">
 			<header class="row announcements-description">
 				<h2 class="col-12 text-center tm-section-title">Announcements</h2>
-				<p class="col-12 text-center fb-description">See our Facebook page below for updates on sales, new products, and more.</p>
+				<p class="col-12 text-center fb-description">See our Facebook page below for updates on sales, new products, and&nbsp;more.</p>
 			</header>
 			<iframe 
 				id="fb-root" 
