mobile styling tweaks

--- a/index.html
+++ b/index.html
@@ -165,17 +165,17 @@
 						<img src="img/fireworks.jpg" alt="Fireworks">
 						<figcaption>Fireworks</figcaption>
 					</figure>
-					<div class="gallery-row">
+					<div class="gallery-row" style="margin-bottom: 0;">
 						<figure class="gallery-item img-container">
 							<img src="img/biosteel.jpg" alt="TODO">
 							<figcaption>Sports Drinks</figcaption>
 						</figure>
 						<figure class="gallery-item img-container">
 							<img src="img/morebeer.jpg" alt="TODO">
-							<figcaption>Beer TODO</figcaption>
+							<figcaption>Beer</figcaption>
 						</figure>
 					</div>
-					<figure class="gallery-item img-container">
+					<figure class="gallery-item img-container dart-img">
 						<img src="img/fishing.jpg" alt="Darts">
 						<figcaption>Darts Supplies and Memorabilia</figcaption>
 					</figure>
@@ -295,7 +295,7 @@
 		</button>
 
 		<footer class="tm-footer text-center">
-			<p>Copyright &copy; <script>document.write(new Date().getFullYear())</script> Mac's Convenience&nbsp;&nbsp;|&nbsp;&nbsp;Design: <a rel="nofollow" href="https://briannamcdonald.me/portfolio-website">Brianna McDonald</a> </p>
+			<p>Copyright &copy; <script>document.write(new Date().getFullYear())</script> Mac's Convenience&nbsp;&nbsp;|&nbsp;&nbsp;Design: <a rel="nofollow" href="https://briannamcdonald.me/portfolio-website">Brianna&nbsp;McDonald</a> </p>
 		</footer>
 	</div>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
