--- a/index.html
+++ b/index.html
@@ -207,13 +207,13 @@
 			</header>
 
 			<div class="contact-row">
-				<div class="contact-subsection-container">
-					<div class="contact-subsection">
+				<div class="contact-subsection-container" style="width: 100%;">
+					<div class="contact-subsection" style="width: 100%;">
 						<h4 class="tm-info-title subsection-title">Address</h4>
 						<address>
 							241 Main Street
 							<br />
-							Milltown - Head of Bay d'Espoir
+							Milltown - Head of Bay&nbsp;d'Espoir
 							<br />
 							Newfoundland & Labrador
 							<br />
@@ -295,7 +295,7 @@
 		</button>
 
 		<footer class="tm-footer text-center">
-			<p>Copyright &copy; <script>document.write(new Date().getFullYear())</script> Mac's Convenience&nbsp;&nbsp;|&nbsp;&nbsp;Design: <a rel="nofollow" href="https://briannamcdonald.me/portfolio-website">Brianna&nbsp;McDonald</a> </p>
+			<p>Copyright &copy; <script>document.write(new Date().getFullYear())</script> Mac's Convenience&nbsp;&nbsp;|&nbsp;&nbsp;Design:&nbsp;<a rel="nofollow" href="https://briannamcdonald.me/portfolio-website">Brianna&nbsp;McDonald</a> </p>
 		</footer>
 	</div>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
