--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
 			<p>Copyright &copy; <script>document.write(new Date().getFullYear())</script> Mac's Convenience&nbsp;&nbsp;|&nbsp;&nbsp;Design:&nbsp;<a rel="nofollow" href="https://briannamcdonald.me/portfolio-website">Brianna&nbsp;McDonald</a> </p>
 		</footer>
 	</div>
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
 	<script src="js/parallax.min.js"></script>
 	<script>
 		document.querySelectorAll('a[href^="#"]').forEach(anchor => {
@@ -399,10 +399,6 @@
 				fbIframe.setAttribute('data-width', '500');
 			}
 		}
-
-		window.addEventListener('resize', () => {
-			console.log(`Width: ${window.innerWidth}, Height: ${window.innerHeight}`);
-		});
 
 		window.addEventListener('load', adjustFacebookWidth);
 		window.addEventListener('resize', adjustFacebookWidth);
