aligned map width with fb plugin width for mobile

--- a/index.html
+++ b/index.html
@@ -271,18 +271,21 @@
 						</div>
 					</div>
 				</div>
-<!-- How to change your own map point
-	1. Go to Google Maps
-	2. Click on your location point
-	3. Click "Share" and choose "Embed map" tab
-	4. Copy only URL and paste it within the src="" field below
--->
-				<div class="tm-container-inner-2 tm-map-section">
+				<div class="tm-container-inner-2 tm-map-section desktop-map">
 					<div class="row">
 						<div class="col-12">
 							<div class="tm-map">
 								<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2673.654192846537!2d-55.74717568837994!3d47.9237281977643!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4b719ba9dd35334f%3A0xd0a12ecf8dc63ca5!2sLee&#39;s%20Convenence!5e0!3m2!1sen!2sca!4v1734825561411!5m2!1sen!2sca" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
 							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="tm-container-inner-2 tm-map-section mobile-map">
+				<div class="row">
+					<div class="col-12">
+						<div class="tm-map">
+							<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2673.654192846537!2d-55.74717568837994!3d47.9237281977643!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4b719ba9dd35334f%3A0xd0a12ecf8dc63ca5!2sLee&#39;s%20Convenence!5e0!3m2!1sen!2sca!4v1734825561411!5m2!1sen!2sca" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
 						</div>
 					</div>
 				</div>
